Implemented Item write method and small fixes
Now testing MUST be done in "DesktopLauncher" class